small style and content updates

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -106,3 +106,9 @@ $path: "/public/images/";
   margin-top: 15px;
   display: block;
 }
+
+.link-approval {
+  font-weight: 700;
+  background-color: #fff;
+  border: none;
+}
