--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,23 +12,13 @@
 
       <h1 class="heading-xlarge">
         Pay link set up
-        <span class="heading-secondary">{{releaseVersion}}</span>
-      </h1>{{releaseVersion | log }}
+      </h1>
 
-      <h2 class="heading-medium">About this page</h2>
-
-      <p>You can change the service name by editing the file '/app/config.js'.</p>
-
-			<h2 class="heading-medium">Resources</h2>
+			<h2 class="heading-medium">Links</h2>
 
 			<ul class="list list-bullet">
-				<li><a href="/docs/tutorials-and-examples">Example pages and documentation</a></li>
-				<li><a href="https://github.com/alphagov/govuk_prototype_kit">GitHub</a></li>
-				<li>
-					<a href="https://govuk-elements.herokuapp.com/snippets/">
-						Guide to GOV.UK Elements
-					</a>
-				</li>
+				<li><a href="/set-up-payment">Set up payment (New)</a></li>
+				<li><a href="/set-up-payment-2">Set up payment (with draft)</a></li>
 			</ul>
 
 
