--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -112,3 +112,20 @@ $path: "/public/images/";
   background-color: #fff;
   border: none;
 }
+
+.currency-input {
+  &__inner {
+    position: relative;
+
+    &__unit {
+      position: absolute;
+      bottom: -34px;
+      left: $gutter / 3;
+      font-weight: bold;
+    }
+  }
+
+  .form-control {
+    padding: 6px 0 3px 25px;
+  }
+}
