--- a/app/views/details-review-1.html
+++ b/app/views/details-review-1.html
@@ -17,7 +17,7 @@
       <table class="bottom-space">
         <tbody>
          <tr>
-            <th scope="row"></th>
+            <th scope="row" class="wide-th"></th>
             <td class="numeric"></td>
             <td><a href=""></a></td>
           </tr>
@@ -34,7 +34,7 @@
           <tr>
             <th scope="row">URL</th>
             <td>www.gov.uk/pay/{{ data['payment-title'] | replace(" ", "-") | lower }}</td>
-            <td>You'll need to amend the payment landing page title to change the URL</td>
+            <td class="font-xsmall">You'll need to amend the payment page title to change the URL</td>
           </tr>
           <tr>
             <th scope="row">Fee</th>
