added a sample user flow

--- a/app/views/details-review-1.html
+++ b/app/views/details-review-1.html
@@ -66,7 +66,7 @@
       </table>
 
       <div class="form-group">
-      <p>You will need to submit this payment link page <br> for approval before it can go live.</p>
+      <p>You'll need to submit this payment link page <br> for approval before it can go live.</p>
           <a href="/set-up-payment-2">
       	     <input class="button" type="submit" value="Save draft and continue">
     		  </a>  
