--- a/app/views/details-4-additional-info.html
+++ b/app/views/details-4-additional-info.html
@@ -14,7 +14,7 @@
         <fieldset>
           <legend class="bottom-space">
             <h1 class="heading-large">Collect additional information</h1>
-            <span>Sometimes the applicant and payer will be different people. We already collect information like email and name on the payment pages, but you can choose to collect additional information from the applicant at this point if you want.</span>
+            <span>Sometimes the applicant and payer will be different people. GOV.UK Pay already collects information like email and name on the payment pages, but you can choose to collect additional information from the applicant at this point if you want.</span>
           </legend>
 
           <div class="multiple-choice">
