--- a/app/views/set-up-payment-2.html
+++ b/app/views/set-up-payment-2.html
@@ -22,7 +22,19 @@
                 <input class="button" type="submit" value="Create payment link">
             </a>
         </div>
-        <p><a href="#">Read guidance on using payment links</a></p>
+
+        <details>
+      <summary><span class="summary">See an example payment link user flow</span></summary>
+
+      <div class="panel panel-border-narrow">
+      <h3 class="heading-medium">User goes to the payment link they are given</h3>
+        <p>You will create the URL for the payment link. For example:<br>
+        www.gov.uk/pay/pay-for-my-service</p>
+
+        <img src="/public/images/example-flow.png">
+
+      </div>
+  </details>
 
     </div>
   </div>
