--- a/app/views/set-up-payment-2.html
+++ b/app/views/set-up-payment-2.html
@@ -19,7 +19,7 @@
 
         <div class="form-group">
             <a href="/details-1-title">
-                <input class="button" type="submit" value="Create payment link">
+                <input class="button" type="submit" value="Create a new payment link">
             </a>
         </div>
 
