added direct debit flows

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -30,6 +30,8 @@ $path: "/public/images/";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 
+@import 'paymentpage';
+
 .cancel-link {
   margin-top: 20px;
 }
