--- a/app/views/dd-payment-pages/direct-debit-payment-1.html
+++ b/app/views/dd-payment-pages/direct-debit-payment-1.html
@@ -15,7 +15,7 @@
 <div class="grid-row">
    <div class="column-two-thirds">
   	<h1 class="heading-large">Set up a Direct Debit</h1>
-  		<p>We will take a one-off payment from your bank account</p>
+  		<p>We’ll take a one-off payment from your bank account</p>
 
 	<form class="form" method="POST" action="/dd-payment-pages/direct-debit-payment-2">
 		  	<div class="form-group">
@@ -45,7 +45,7 @@
 
 			      <legend>
 			        <h1 class="heading-small">
-			          Are you allowed to authorise Direct Debits on this account? <span class="form-hint">If it’s a joint account but you can authorise payments on your own, click yes</span>
+			          Are you allowed to authorise Direct Debits on this account? <span class="form-hint" style="margin-top:5px;">If it’s a joint account but you can authorise payments on your own, click ‘Yes’</span>
 			        </h1>
 			      </legend>
 
