--- a/app/views/dd-payment-pages/direct-debit-confirmed.html
+++ b/app/views/dd-payment-pages/direct-debit-confirmed.html
@@ -16,7 +16,7 @@
 			 <h3>Reference number:</h3>
 			 <p>147836</p>
 		</div>
-			<h2 class="heading-medium">We will email you a receipt in the next hour</h2>
+			<h2 class="heading-medium">We’ll email you a receipt in the next hour.</h2>
 			<table>
 			    <thead>
 			      <tr>
@@ -25,7 +25,7 @@
 			    </thead>
 			    <tbody>
 			      <tr>
-			        <td>Payment of:</td>
+			        <td>Payment for:</td>
 			        <td>Waste Management Disposal</td>
 			      </tr>
 			      <tr>
