updated success page

--- a/app/assets/sass/paymentpage.scss
+++ b/app/assets/sass/paymentpage.scss
@@ -178,6 +178,11 @@
   margin-top: 30px;
 }
 
+.payment-confirmed h2 {
+  font-size: 36px;
+  font-weight: 400;
+}
+
 .payment-confirmed p {
   font-size: 36px;
   font-weight: 700;
