--- a/app/views/dd-payment-pages/direct-debit-confirmed.html
+++ b/app/views/dd-payment-pages/direct-debit-confirmed.html
@@ -13,7 +13,7 @@
     		<div class="column-two-thirds">
     		<div class="payment-confirmed">
 			<h1 class="heading-medium"><img src="/public/images/tick-icon.png">Direct Debit payment successful</h1>
-			 <h2 class="lede">Reference number:</h3>
+			 <h2>Reference number:</h2>
 			 <p>147836</p>
 		</div>
 			<h2 class="heading-medium">We’ll email you a receipt in the next hour.</h2>
