payment summary updates

--- a/app/views/dd-payment-pages/direct-debit-confirmed.html
+++ b/app/views/dd-payment-pages/direct-debit-confirmed.html
@@ -16,7 +16,8 @@
 			 <h2>Reference number:</h2>
 			 <p>147836</p>
 		</div>
-			<h2 class="heading-medium">We’ll email you a receipt in the next hour.</h2>
+			<h2 class="heading-small">We’ll email you a payment receipt in the next hour. 
+			Your licence will arrive by post in the next 5 working days.</h2>
 			<table>
 			    <thead>
 			      <tr>
@@ -26,11 +27,11 @@
 			    <tbody>
 			      <tr>
 			        <td>Payment for:</td>
-			        <td>Waste Management Disposal</td>
+			        <td>Fishing Licence UK</td>
 			      </tr>
 			      <tr>
 			        <td>Total amount:</td>
-			        <td> £45.00</td>
+			        <td> £12.00</td>
 			      </tr>
 			    </tbody>
 
