--- a/app/views/dd-payment-pages/direct-debit-choose.html
+++ b/app/views/dd-payment-pages/direct-debit-choose.html
@@ -43,9 +43,9 @@
 
 			<div class="payment-summary-small">
 				<h2>Payment summary</h2>
-			      <p class="payment-info">Waste management disposal</p>
+			      <p class="payment-info">Fishing Licence UK</p>
 			       <h3>Total amount:</h3>
-			       <p class="payment-amount"> £45.00</p>
+			       <p class="payment-amount"> £12.00</p>
 			</div>
 	</div>
 </div>
