added fishing permit service flow to direct debit payment

--- a/app/views/dd-payment-pages/direct-debit-confirmed.html
+++ b/app/views/dd-payment-pages/direct-debit-confirmed.html
@@ -17,7 +17,7 @@
 			 <p>147836</p>
 		</div>
 			<h2 class="heading-small">We’ll email you a payment receipt in the next hour. 
-			Your licence will arrive by post in the next 5 working days.</h2>
+			Your permit will arrive by post in the next 5 working days.</h2>
 			<table>
 			    <thead>
 			      <tr>
@@ -27,11 +27,11 @@
 			    <tbody>
 			      <tr>
 			        <td>Payment for:</td>
-			        <td>Fishing Licence UK</td>
+			        <td>Lock and Weir Fishing Permit – River Thames</td>
 			      </tr>
 			      <tr>
 			        <td>Total amount:</td>
-			        <td> £12.00</td>
+			        <td> £31.00</td>
 			      </tr>
 			    </tbody>
 
