--- a/app/views/dd-payment-pages/direct-debit-payment-1.html
+++ b/app/views/dd-payment-pages/direct-debit-payment-1.html
@@ -9,7 +9,7 @@
 <main id="content" role="main">
 
 	<div class="back">
-		<a href="direct-debit-choose" class="link-back">Back</a>
+		<a href="apply-pay-amount" class="link-back">Back</a>
 	</div>
 
 <div class="grid-row">
@@ -59,8 +59,18 @@
 			        <label for="example-contact-by-phone">No</label>
 			      </div>
 			      <div class="panel panel-border-narrow js-hidden" id="contact-by-phone">
-			        <p>If more than one person is required to authorise Direct Debits on this account, we’ll need all signatories to sign a paper version of the Direct Debit mandate. We’ll give you instructions on how to do this after you complete this form.</p>
+			        <p>If more than one person is required to authorise Direct Debits on this bank account, you can't proceed with this online payment method. 
+
+			        <p><a href="">Go back and try a different payment method</a></p>
+			       <!--  <p>If more than one person is required to authorise Direct Debits on this account, we’ll need all signatories to sign a paper version of the Direct Debit mandate. We’ll give you instructions on how to do this after you complete this form.</p> -->
 			      </div>
+
+			      <!-- <p><a href="">Download the paper form</a></p>
+			        <p class="heading-small">Post it to this address:</p>
+			        <p>10 Main Street<br>
+			        Islington<br>
+			        London<br>
+			        N8 9JR</p> -->
 
 			    </fieldset>
 			  </div>
@@ -128,9 +138,9 @@
 
 			<div class="payment-summary-small">
 				<h2>Payment summary</h2>
-			      <p class="payment-info">Fishing Licence UK</p>
+			      <p class="payment-info">Lock and Weir Fishing Permit – River Thames</p>
 			       <h3>Total amount:</h3>
-			       <p class="payment-amount"> £12.00</p>
+			       <p class="payment-amount"> £31.00</p>
 			</div>
 	</div>
 </div>
