--- a/app/views/dd-payment-pages/direct-debit-payment-2.html
+++ b/app/views/dd-payment-pages/direct-debit-payment-2.html
@@ -9,7 +9,7 @@
 <main id="content" role="main">
 
 <div class="back">
-		<a href="/dd-payment-pages/direct-debit-payment-1" class="link-back">Back</a>
+		<a href="direct-debit-payment-1" class="link-back">Back</a>
 	</div>
 
 
@@ -23,7 +23,7 @@
 		    <tbody>
 		      <tr>
 		        <td>Name on the account:</td>
-		        <td class="table-info">John Smith</td>
+		        <td class="table-info">Alex Smith</td>
 		      </tr>
 		      <tr>
 		       <td>Sort code:</td>
@@ -37,7 +37,7 @@
   		</table>	
 		</div>
 		<div class="panel panel-border-wide">
-				<p><span class="bold-small">‘Waste-Disposal-Pay’</span> will appear on your bank statement</p>
+				<p><span class="bold-small">‘Thames-Fishing-Permit’</span> will appear on your bank statement</p>
 		</div>
 
 			<div class="form-group">
@@ -51,9 +51,9 @@
 		 <div class="column-third">
 			<div class="payment-summary-small">
 				<h2>Payment summary</h2>
-			      <p class="payment-info">Fishing Licence UK</p>
+			      <p class="payment-info">Lock and Weir Fishing Permit – River Thames</p>
 			      <h3>Total amount:</h3>
-			      <p class="payment-amount"> £12.00</p>
+			      <p class="payment-amount"> £31.00</p>
 			</div>
 		</div>
 </div>
