licence to permit

--- a/app/views/dd-payment-pages/apply-user-details.html
+++ b/app/views/dd-payment-pages/apply-user-details.html
@@ -52,7 +52,7 @@
 	<div class="form-group">
       <h2 class="heading-medium billing-address-label">Address</h2>
       <div class="payment-type-intro">
-        <p>We'll send your licence here. <br> The address must be in the UK.</p>
+        <p>We'll send your permit here. <br> The address must be in the UK.</p>
         </div>
 			<div class="form-group">
 				<label class="form-label-bold" for="building-and-street">
