content updates to checkbox question

--- a/app/views/dd-payment-pages-2/direct-debit-payment-1.html
+++ b/app/views/dd-payment-pages-2/direct-debit-payment-1.html
@@ -39,14 +39,16 @@
 			</div>
 
 			<div class="form-group">
-		        <div class="multiple-choice">
+		        <div class="multiple-choice multiple-choice-2">
 				  <input id="checkbox-telephone-number" name="contact-by-text-phone" type="checkbox" value="true">
-				  <label for="checkbox-telephone-number">I’m allowed to authorise Direct Debits on this account</label>
-				</div>	      
-		</div>
+				  <label for="checkbox-telephone-number">I’m the only person required to authorise Direct Debits <br> from this account</label>
+				 
+				</div>
+			</div>
+
 
 			<div class="form-group">
-				<label class="form-label-bold" for="email-address">Email address<span class="form-hint">We need this to confirm the Direct Debit with you</span>
+				<label class="form-label-bold" for="email-address">Email address<span class="form-hint">We need this to confirm the Direct Debit payment with you</span>
 			  	</label>
 			  	<input class="form-control" id="email-address" type="text">
 			</div>
