--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -135,3 +135,10 @@ $path: "/public/images/";
 .wide-th {
   width: 170px;
 }
+
+.multiple-choice-2{
+  padding-top: 0px;
+  margin-top: 10px;
+}
+
+
