added content to payment page

--- a/app/views/dd-payment-pages-2/apply-pay-amount.html
+++ b/app/views/dd-payment-pages-2/apply-pay-amount.html
@@ -15,15 +15,15 @@
 <div class="grid-row">
 	<div class="column-two-thirds">
 	  	<h1 class="heading-large">Make your payment</h1>
-
-	  	<p>The cost for a permit is: <br> <span class="heading-large">£31</span></p>
-	  	<p>You can pay using a one-off direct debit payment.</p>
-	  	<p>You'll need to have the following bank details ready:</p>
+		
+		<p>The cost for a permit is: <br> <span class="heading-large">£31</span></p>
+	  	<p>To pay using a one-off Direct Debit payment you’ll need to have the following bank details ready:</p>
 	  	<ul class="list-bullet">
 	  	<li>Account number</li>
 	  	<li>Sort code</li>
 	  	<li>Name on account</li>
 	  	</ul>
+	  	<p style="margin-top:15px;">If more than one person is required to authorise Direct Debits on the bank account you can't proceed with this online payment method. You should use a <a href="">different payment method</a>.</p>
 
 	  	<div class="form-group" style="margin-top:30px;">
 		 			<a class="button" href="direct-debit-payment-1">Continue to payment</a>
