direct debit payment confirm page update

--- a/app/views/dd-payment-pages-2/direct-debit-confirmed.html
+++ b/app/views/dd-payment-pages-2/direct-debit-confirmed.html
@@ -16,8 +16,7 @@
 			 <h2>Reference number:</h2>
 			 <p>147836</p>
 		</div>
-			<h2 class="heading-small">We’ll email you a payment receipt in the next hour. 
-			Your permit will arrive by post in the next 5 working days.</h2>
+			<h2 class="heading-small">We’ve emailed you a payment receipt. Your permit will arrive by post in the next 5 working days.</h2>
 			<table>
 			    <thead>
 			      <tr>
