direct debit payment confirm page update

--- a/app/views/dd-payment-pages-2/apply-start.html
+++ b/app/views/dd-payment-pages-2/apply-start.html
@@ -13,7 +13,7 @@
   	<h1 class="heading-large">Apply for a Lock and Weir Fishing Permit for the River Thames</h1>
 
 			<h2 class="heading-medium">Before you start</h2>
-			<p>This permit allows for the use of up to two rods and lines when fishing for trout, coarse fish and eels. It allows for one rod and line when fishing for other species. Coarse fish includes all freshwater fish except for salmon.</p>
+			<p>This permit allows for the use of up to two rods and lines when fishing for all freshwater fish except for salmon.</p>
 			<p>The permit is not transferable and The Environment Agency reserves the right to
 			suspend or cancel a permit.</p>
 
