--- a/app/views/dd-payment-pages-2/apply-pay-amount.html
+++ b/app/views/dd-payment-pages-2/apply-pay-amount.html
@@ -26,7 +26,7 @@
 	  	<p style="margin-top:15px;">If more than one person is required to authorise Direct Debits on the bank account you can't proceed with this online payment method. You should use a <a href="">different payment method</a>.</p>
 
 	  	<div class="form-group" style="margin-top:30px;">
-		 			<a class="button" href="direct-debit-payment-1">Continue to payment</a>
+		 			<a class="button" href="direct-debit-payment-1">Continue with Direct Debit payment</a>
 		 	</div>
 
 	</div>
