--- a/app/views/dd-payment-pages-2/direct-debit-payment-1.html
+++ b/app/views/dd-payment-pages-2/direct-debit-payment-1.html
@@ -55,10 +55,10 @@
 
 
 			<div class="form-group">
-		 			<a href="/dd-payment-pages/direct-debit-payment-2"><button class="button">Continue</button></a>
+		 			<a href="direct-debit-payment-2"><button class="button">Continue</button></a>
 		 	</div>
 		 	<div class="back">
-					<a href="/dd-payment-pages/direct-debit-choose">Cancel payment</a>
+					<a href="apply-start">Cancel payment</a>
 			</div>
 
 	</form>
