--- a/app/views/dd-payment-pages-2/direct-debit-payment-2.html
+++ b/app/views/dd-payment-pages-2/direct-debit-payment-2.html
@@ -44,7 +44,7 @@
 			 			<a href="direct-debit-confirmed"><button class="button">Confirm payment</button></a>
 			 </div>
 			 <div class="back">
-					<a href="/dd-payment-pages/direct-debit-choose">Cancel payment</a>
+					<a href="apply-start">Cancel payment</a>
 			</div>
 	</div>
 
