--- a/app/views/dd-payment-pages/direct-debit-payment-1.html
+++ b/app/views/dd-payment-pages/direct-debit-payment-1.html
@@ -61,7 +61,7 @@
 			      <div class="panel panel-border-narrow js-hidden" id="contact-by-phone">
 			        <p>If more than one person is required to authorise Direct Debits on this bank account, you can't proceed with this online payment method. 
 
-			        <p><a href="">Go back and try a different payment method</a></p>
+			        <p><a href="other-ways-to-pay">Go back and try a different payment method</a></p>
 			       <!--  <p>If more than one person is required to authorise Direct Debits on this account, we’ll need all signatories to sign a paper version of the Direct Debit mandate. We’ll give you instructions on how to do this after you complete this form.</p> -->
 			      </div>
 
@@ -126,7 +126,7 @@
 		 			<a href="/dd-payment-pages/direct-debit-payment-2"><button class="button">Continue</button></a>
 		 	</div>
 		 	<div class="back">
-					<a href="/dd-payment-pages/direct-debit-choose">Cancel payment</a>
+					<a href="apply-start">Cancel payment</a>
 			</div>
 
 	</form>
