fixed broken link

--- a/app/views/dd-payment-pages-2/direct-debit-payment-1.html
+++ b/app/views/dd-payment-pages-2/direct-debit-payment-1.html
@@ -17,7 +17,7 @@
   	<h1 class="heading-large">Make a one-off Direct Debit payment</h1>
   		<p>We’ll take a one-off payment from your bank account</p>
 
-	<form class="form" method="POST" action="/dd-payment-pages/direct-debit-payment-2">
+	<form class="form" method="POST" action="direct-debit-payment-2">
 		  	<div class="form-group">
 				<label class="form-label-bold" for="name-on-account">
 			    Name on the account
@@ -55,7 +55,7 @@
 
 
 			<div class="form-group">
-		 			<a href="direct-debit-payment-2"><button class="button">Continue</button></a>
+		 			<a href="direct-debit-payment-2" class="button">Continue</a>
 		 	</div>
 		 	<div class="back">
 					<a href="apply-start">Cancel payment</a>
