--- a/app/views/layout2.html
+++ b/app/views/layout2.html
@@ -9,11 +9,12 @@
 {% endblock %}
 
 {% block inside_header %}
+  <span class="product-name"><a href="https://pay-staff-tool-2.herokuapp.com/my-services-2">Pay</a></span>
 {% endblock %}
 
 {% block proposition_header %}
 
-{% include "includes/header-govuk-pay-2.html" %}
+{% include "includes/header-govuk-pay.html" %}
   {% include "includes/propositional_navigation.html" %}
 
   <!-- <div class="header-proposition">
