fixed routes js files so it works for 2 of the items

--- a/app/views/driving-pages/direct-debit-payment-monthly-1.html
+++ b/app/views/driving-pages/direct-debit-payment-monthly-1.html
@@ -141,6 +141,9 @@
 			      <p class="payment-info">Vehicle Tax – paid monthly</p>
 			       <h3>Amount:</h3>
 			       <p class="payment-amount"> £25.00 <span class="font-xsmall">per month</span></p>
+			       <div>
+			       	<p class="font-xsmall">The first payment will be taken on the date the Direct Debit mandate is set up. All other payments will be taken on the first day of each month a payment is due.</p>
+			       </div>
 			</div>
 	</div>
 </div>
