--- a/app/views/driving-pages/renew-car-tax-choose-payment.html
+++ b/app/views/driving-pages/renew-car-tax-choose-payment.html
@@ -14,6 +14,9 @@ GOV.UK prototype kit
 
 <div class="grid-row">
 	<div class="column-two-thirds">
+	   
+
+
 	   <form action="renew-car-tax-choose-period">
           <div class="form-group">
             <fieldset>
@@ -25,7 +28,7 @@ GOV.UK prototype kit
 
                <div class="multiple-choice">
 		        <input id="radio-2" type="radio" name="radio-group" value="direct debit">
-		        <label for="radio-2" class="heading-small">Direct debit <span class="form-hint">Choose between different recurring payment schedules such as monthly or yearly</span></label>
+		        <label for="radio-2" class="heading-small">Direct debit <span class="form-hint">Choose between different recurring payment plans such as monthly or yearly</span></label>
 		      </div>
 
               <div class="multiple-choice">
@@ -41,15 +44,13 @@ GOV.UK prototype kit
 	  	    <p class="cancel-link"><a href="#">Cancel</a></p>
 	  	   </div>
         </form>
-
+        
 
 	   </div>
 	    <div class="column-third">
 
 		</div>
 	  </div>
-
-
 
 
 </main>
