yearly and monthly flows work

--- a/app/views/driving-pages/direct-debit-confirmed-yearly.html
+++ b/app/views/driving-pages/direct-debit-confirmed-yearly.html
@@ -9,38 +9,55 @@
 <main id="content" role="main">
 
 
-		<div class="grid-row">
-    		<div class="column-two-thirds">
-    		<div class="payment-confirmed">
-			<h1 class="heading-medium"><img src="/public/images/tick-icon.png">Direct Debit payment successful</h1>
+<div class="grid-row">
+    <div class="column-two-thirds">
+
+    	<div class="payment-confirmed">
+			<h1 class="heading-medium"><img src="/public/images/tick-icon.png">Direct Debit yearly payment plan has been set up</h1>
 			 <h2>Reference number:</h2>
-			 <p>147836</p>
+			 <p>MRN147877</p>
 		</div>
-			<h2 class="heading-small">We’ve emailed you a payment receipt. Your permit will arrive by post in the next 5 working days.</h2>
+		<div class="email-copy" style="margin-top:30px;">
+			<p>We’ve emailed you a direct debit mandate and notice of payment.</p> 
+			<p>The payment of £275.00 should be taken from your account in around 3 working days. Please make sure enough money is in your account.</p>
+		</div>
+
+			<h2 class="heading-medium">Your payment schedule</h2>
 			<table>
 			    <thead>
 			      <tr>
-			        <th colspan="2">Your purchase details</th>
+			        <th>Date</th>
+			        <th>Amount</th>
 			      </tr>
 			    </thead>
 			    <tbody>
 			      <tr>
-			        <td>Payment for:</td>
-			        <td>Lock and Weir Fishing Permit – River Thames</td>
+			        <td>26 Feb 2018 <br><span class="font-xsmall">This payment is backdated for February</span></td>
+			        <td>£275.00</td>
 			      </tr>
 			      <tr>
-			        <td>Total amount:</td>
-			        <td> £31.00</td>
+			        <td>01 February 2019 <br><span class="font-xsmall">Next payment date</span></td>
+			        <td> £275.00</td>
 			      </tr>
 			    </tbody>
 
 			  </table>
+
+			 <div class="panel panel-border-wide" style="margin-top:30px;">
+			  <p>Your Direct Debit will be automatically be renewed every 12 months unless we receive notice to cancel it from you or your bank.</p>
+			 </div>
 		</div>
-		</div>
+	</div>
 
 
-	 <div class="form-group" style="margin-top: 30px;">
-			 <a href="#"><button class="button">Finish</button></a>
+	 <div class="grid-row">
+	    <div class="column-two-thirds">
+	    <div class="dd-terms-conditions">
+		 <div class="dd-images"><img src="/public/images/directdebit.png">
+			 <p>Your payments are protected by the <a href="direct-debit-guarantee">Direct Debit guarantee</a>.</p>
+		 </div>
+		</div>
+	 </div>
 	</div>
 
 
