--- a/app/views/driving-pages/direct-debit-payment-yearly-1.html
+++ b/app/views/driving-pages/direct-debit-payment-yearly-1.html
@@ -15,7 +15,6 @@
 <div class="grid-row">
    <div class="column-two-thirds">
   	<h1 class="heading-large">Set up a Direct Debit</h1>
-  		<p>We’ll take a one-off payment from your bank account</p>
 
 	<form class="form" method="POST" action="/dd-payment-pages/direct-debit-payment-2">
 		  	<div class="form-group">
@@ -123,10 +122,10 @@
 		</div>
 
 			<div class="form-group">
-		 			<a href="/dd-payment-pages/direct-debit-payment-2"><button class="button">Continue</button></a>
+		 			<a href="direct-debit-payment-yearly-2"><button class="button">Continue</button></a>
 		 	</div>
 		 	<div class="back">
-					<a href="apply-start">Cancel payment</a>
+					<a href="renew-car-tax-choose-payment">Cancel payment</a>
 			</div>
 
 	</form>
@@ -138,9 +137,12 @@
 
 			<div class="payment-summary-small">
 				<h2>Payment summary</h2>
-			      <p class="payment-info">Lock and Weir Fishing Permit – River Thames</p>
-			       <h3>Total amount:</h3>
-			       <p class="payment-amount"> £31.00</p>
+			      <p class="payment-info">Vehicle Tax – paid yearly</p>
+			       <h3>Amount:</h3>
+			       <p class="payment-amount"> £275.00 <span class="font-xsmall">per year</span></p>
+			       <div>
+			       	<!-- <p class="font-xsmall">The first payment will be taken on the date the Direct Debit mandate is set up. Following payments will be taken on the first day of the month a payment is due.</p> -->
+			       </div>
 			</div>
 	</div>
 </div>
