--- a/app/views/driving-pages/direct-debit-payment-yearly-2.html
+++ b/app/views/driving-pages/direct-debit-payment-yearly-2.html
@@ -37,23 +37,26 @@
   		</table>	
 		</div>
 		<div class="panel panel-border-wide">
-				<p><span class="bold-small">‘Thames-Fishing-Permit’</span> will appear on your bank statement</p>
+				<p><span class="bold-small">‘VehicleTax’</span> will appear on your bank statement</p>
 		</div>
 
 			<div class="form-group">
-			 			<a href="direct-debit-confirmed"><button class="button">Confirm payment</button></a>
+			 			<a href="direct-debit-confirmed-yearly"><button class="button">Confirm payment</button></a>
 			 </div>
 			 <div class="back">
-					<a href="apply-start">Cancel payment</a>
+					<a href="renew-car-tax-choose-payment">Cancel payment</a>
 			</div>
 	</div>
 
 		 <div class="column-third">
 			<div class="payment-summary-small">
 				<h2>Payment summary</h2>
-			      <p class="payment-info">Lock and Weir Fishing Permit – River Thames</p>
-			      <h3>Total amount:</h3>
-			      <p class="payment-amount"> £31.00</p>
+			      <p class="payment-info">Vehicle Tax – paid yearly</p>
+			       <h3>Amount:</h3>
+			       <p class="payment-amount"> £275.00 <span class="font-xsmall">per year</span></p>
+			       <div>
+			       	<!-- <p class="font-xsmall">The first payment will be taken on the date the Direct Debit mandate is set up. Following payments will be taken on the first day of the month a payment is due.</p> -->
+			       </div>
 			</div>
 		</div>
 </div>
