--- a/app/views/borchester/borchester-council-tax.html
+++ b/app/views/borchester/borchester-council-tax.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/static/vendor/foundation/css/foundation.css">
     <link rel="stylesheet" href="/static/vendor/fontawesome/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="/public/stylesheets/borchester.css">
-    
+     
 
   </head>
   <body>
@@ -45,12 +45,12 @@
             </label>
             <input class="form-control" id="full-name" name="full-name" type="text">
         </div>
-        <div class="form-group">
+       <!--  <div class="form-group">
             <label class="form-label-bold" for="card-number">
               Amount to pay
               </label><span class="poundsign">£</span>
               <input class="form-control" id="amount" type="text">
-          </div>
+          </div> -->
         <div class="row">
           <div class="column-half">
             <div class="form-group">
