--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,14 +11,14 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-xlarge">
-        Pay link set up
+        Direct Debit recurring payments
       </h1>
 
 			<h2 class="heading-medium">Links</h2>
 
 			<ul class="list list-bullet">
-				<li><a href="/set-up-payment">Set up payment (New)</a></li>
-				<li><a href="/set-up-payment-2">Set up payment (with draft)</a></li>
+				<li><a href="/driving-pages/renew-car-tax-start">Vehicle Tax</a></li>
+				<li><a href="/borchester/borchester-home">Council Tax</a></li>
 			</ul>
 
 
