--- a/app/views/layout2.html
+++ b/app/views/layout2.html
@@ -1,4 +1,4 @@
-{% extends "govuk_template.html" %}
+{% extends "govuk_template_unbranded.html" %}
 
 {% block head %}
   {% include "includes/head.html" %}
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block inside_header %}
-  <span class="product-name"><a href="https://pay-staff-tool-2.herokuapp.com/my-services-2">Pay</a></span>
+
 {% endblock %}
 
 {% block proposition_header %}
