updates to council tax flow

--- a/app/assets/sass/borchester.scss
+++ b/app/assets/sass/borchester.scss
@@ -140,6 +140,13 @@ img {
   text-decoration: none;
 }
 
+.services li{
+  border-bottom: 1px solid gray;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  margin-right: 30px;
+}
+
 .recent-notices ul{
   font-size: 19px;
   line-height: 30px;
