--- a/app/views/borchester/borchester-council-tax-service-before.html
+++ b/app/views/borchester/borchester-council-tax-service-before.html
@@ -31,11 +31,16 @@ GOV.UK prototype kit
 			      </tr>
 			      <tr>
 			        <td>Amount to pay:</td>
-			        <td>£1,200.00 per year</td>
+			        <td>£1,200.00 per year <span class="heading-small">or</span> £100.00 per month</td>
 			      </tr>
 			    </tbody>
 			  </table>
 		</div>
+
+    <div class="panel panel-border-wide">
+      <p class="heading-small">Your account is currently in arrears.</p> 
+      <p>Set up a Direct Debit and payments will be made automatically using the plan of your choice.</p>
+    </div>
 
 
 	 <div class="form-group">
