--- a/app/views/borchester/borchester-home.html
+++ b/app/views/borchester/borchester-home.html
@@ -39,8 +39,9 @@
               <img src="/public/images/borchester-image.jpg"/>         
     </div>
      <div id="news" class="column-one-third">          
-              <h2> Council builds 250 new homes so far this year </h2>
-              <p> Borchester City Council is committed to providing quality housing for all residents and aims to complete a further 400 homes by the end of 2015. </p>         
+              <h2> Council builds 250 new homes in 2017 </h2>
+              <p> Borchester City Council is committed to providing quality housing for all residents and aims to complete a further 400 homes by the end of 2018. </p>
+              <p><a href="#">Read more</a></p>         
     </div>
   </div>
 
