--- a/app/views/borchester/renew-council-tax-choose-payment.html
+++ b/app/views/borchester/renew-council-tax-choose-payment.html
@@ -29,12 +29,12 @@ GOV.UK prototype kit
 
                <div class="multiple-choice">
 		        <input id="radio-2" type="radio" name="radio-group" value="direct debit">
-		        <label for="radio-2" class="heading-small">Direct debit <span class="form-hint">Choose between different recurring payment plans such as monthly or yearly</span></label>
+		        <label for="radio-2" class="heading-small">Direct debit <span class="form-hint">Choose between different recurring payment plans</span></label>
 		      </div>
 
               <div class="multiple-choice">
 		        <input id="radio-1" type="radio" name="radio-group" value="credit or debit card">
-		        <label for="radio-1" class="heading-small">Credit or Debit card <span class="form-hint">Pay a one-off fee for the whole year</span></label>
+		        <label for="radio-1" class="heading-small">Credit or Debit card <span class="form-hint">Pay a one-off fee</span></label>
 		      </div>
        
             </fieldset>
