--- a/app/views/borchester/borchester-council-tax.html
+++ b/app/views/borchester/borchester-council-tax.html
@@ -36,6 +36,11 @@
 <div class="wrapper fullscreen">
   <div class="row">
     <div class="column-half">
+
+    <div class="back">
+      <a href="borchester-home" class="link-back">Home</a>
+    </div>
+
       <h2>Pay your council tax</h2>
         <div class="column-full">
         <div class="form-group">
