added card payment flow for car tax

--- a/app/views/driving-pages/direct-debit-payment-yearly-1.html
+++ b/app/views/driving-pages/direct-debit-payment-yearly-1.html
@@ -9,7 +9,7 @@
 <main id="content" role="main">
 
 	<div class="back">
-		<a href="apply-pay-amount" class="link-back">Back</a>
+		<a href="renew-car-tax-choose-period" class="link-back">Back</a>
 	</div>
 
 <div class="grid-row">
@@ -139,7 +139,7 @@
 				<h2>Payment summary</h2>
 			      <p class="payment-info">Vehicle Tax – paid yearly</p>
 			       <h3>Amount:</h3>
-			       <p class="payment-amount"> £275.00 <span class="font-xsmall">per year</span></p>
+			       <p class="payment-amount"> £300.00 <span class="font-xsmall">per year</span></p>
 			       <div>
 			       	<!-- <p class="font-xsmall">The first payment will be taken on the date the Direct Debit mandate is set up. Following payments will be taken on the first day of the month a payment is due.</p> -->
 			       </div>
