--- a/app/views/driving-pages/renew-car-tax-choose-payment.html
+++ b/app/views/driving-pages/renew-car-tax-choose-payment.html
@@ -17,7 +17,7 @@ GOV.UK prototype kit
 	   
 
 
-	   <form action="renew-car-tax-choose-period">
+	   <form action="/pick-payment-type">
           <div class="form-group">
             <fieldset>
              <legend>
@@ -27,13 +27,13 @@ GOV.UK prototype kit
               </legend>
 
                <div class="multiple-choice">
-		        <input id="radio-2" type="radio" name="radio-group" value="direct debit">
-		        <label for="radio-2" class="heading-small">Direct debit <span class="form-hint">Choose between different recurring payment plans such as monthly or yearly</span></label>
+		        <input id="renew-car-tax-choose-period" type="radio" name="radiogroup" value="renew-car-tax-choose-period">
+		        <label for="renew-car-tax-choose-period" class="heading-small">Direct debit <span class="form-hint">Choose between different recurring payment plans such as monthly or yearly</span></label>
 		      </div>
 
               <div class="multiple-choice">
-		        <input id="radio-1" type="radio" name="radio-group" value="credit or debit card">
-		        <label for="radio-1" class="heading-small">Credit or Debit card <span class="form-hint">Pay a one-off fee for the whole year</span></label>
+		        <input id="renew-car-tax-card-summary" type="radio" name="radiogroup" value="renew-car-tax-card-summary">
+		        <label for="renew-car-tax-card-summary" class="heading-small">Credit or Debit card <span class="form-hint">Pay a one-off fee for the whole year</span></label>
 		      </div>
        
             </fieldset>
