--- a/app/views/driving-pages/direct-debit-confirmed-monthly.html
+++ b/app/views/driving-pages/direct-debit-confirmed-monthly.html
@@ -18,8 +18,8 @@
 			 <p>MRN147836</p>
 		</div>
 		<div class="email-copy" style="margin-top:30px;">
-			<p>We’ve emailed you a direct debit mandate and notice of payment.</p> 
-			<p>The first payment of £25.00 should be taken from your account in around 3 working days. Please make sure enough money is in your account.</p>
+			<p>We’ve emailed you the Direct Debit details and reference number.</p> 
+			<p>The first payment of £25.00 should be taken from your account in around 4 working days. Please make sure enough money is in your account. All monthly payments after that will be taken on the first working day of the month.</p>
 		</div>
 
 			<h2 class="heading-medium">Your payment schedule</h2>
@@ -40,7 +40,7 @@
 			        <td> £25.00</td>
 			      </tr>
 			      <tr>
-			        <td>01 April 2018</td>
+			        <td>02 April 2018</td>
 			        <td> £25.00</td>
 			      </tr>
 			      <tr>
@@ -48,7 +48,7 @@
 			        <td> £25.00</td>
 			      </tr>
 			      <tr>
-			        <td>01 June 2018</td>
+			        <td>03 June 2018</td>
 			        <td> £25.00</td>
 			      </tr>
 			      <tr>
@@ -56,7 +56,7 @@
 			        <td> £25.00</td>
 			      </tr>
 			      <tr>
-			        <td>01 August 2018</td>
+			        <td>02 August 2018</td>
 			        <td> £25.00</td>
 			      </tr>
 			      <tr>
@@ -64,11 +64,11 @@
 			        <td> £25.00</td>
 			      </tr>
 			      <tr>
-			        <td>01 October 2018</td>
+			        <td>02 October 2018</td>
 			        <td> £25.00</td>
 			      </tr>
 			      <tr>
-			        <td>01 November 2018</td>
+			        <td>03 November 2018</td>
 			        <td> £25.00</td>
 			      </tr>
 			      <tr>
@@ -76,7 +76,7 @@
 			        <td> £25.00</td>
 			      </tr>
 			      <tr>
-			        <td>01 January 2018</td>
+			        <td>01 January 2019</td>
 			        <td> £25.00</td>
 			      </tr>
 			    </tbody>
