--- a/app/views/driving-pages/direct-debit-confirmed-yearly.html
+++ b/app/views/driving-pages/direct-debit-confirmed-yearly.html
@@ -18,8 +18,8 @@
 			 <p>MRN147877</p>
 		</div>
 		<div class="email-copy" style="margin-top:30px;">
-			<p>We’ve emailed you a direct debit mandate and notice of payment.</p> 
-			<p>The payment of £275.00 should be taken from your account in around 3 working days. Please make sure enough money is in your account.</p>
+			<p>We’ve emailed you the Direct Debit details and reference number.</p> 
+			<p>The payment of £300.00 should be taken from your account in around 4 working days. Please make sure enough money is in your account.</p>
 		</div>
 
 			<h2 class="heading-medium">Your payment schedule</h2>
@@ -33,11 +33,11 @@
 			    <tbody>
 			      <tr>
 			        <td>26 Feb 2018 <br><span class="font-xsmall">This payment is backdated for February</span></td>
-			        <td>£275.00</td>
+			        <td>£300.00</td>
 			      </tr>
 			      <tr>
 			        <td>01 February 2019 <br><span class="font-xsmall">Next payment date</span></td>
-			        <td> £275.00</td>
+			        <td> £300.00</td>
 			      </tr>
 			    </tbody>
 
