--- a/app/views/driving-pages/direct-debit-payment-monthly-2.html
+++ b/app/views/driving-pages/direct-debit-payment-monthly-2.html
@@ -27,7 +27,7 @@
 		      </tr>
 		      <tr>
 		       <td>Sort code:</td>
-		        <td class="table-info">400500</td>
+		        <td class="table-info">40 05 00</td>
 		      </tr>
 		      <tr>
 		        <td>Account number:</td>
@@ -37,7 +37,7 @@
   		</table>	
 		</div>
 		<div class="panel panel-border-wide">
-				<p><span class="bold-small">‘VehicleTax’</span> will appear on your bank statement</p>
+				<p><span class="bold-small">‘MRN147836’</span> will appear on your bank statement</p>
 		</div>
 
 			<div class="form-group">
@@ -54,6 +54,14 @@
 			      <p class="payment-info">Vehicle Tax – paid monthly</p>
 			       <h3>Amount:</h3>
 			       <p class="payment-amount"> £25.00 <span class="font-xsmall">per month</span></p>
+
+
+			<details>
+			 <summary><span class="summary font-xsmall">When will payments be taken</span></summary>
+				  <div class="panel panel-border-narrow">
+				    <p class="font-xsmall">The first payment will be taken on the date the Direct Debit mandate is set up. All other payments will be taken on the first day of each month a payment is due.</p>
+				  </div>
+				</details>
 			</div>
 		</div>
 </div>
